--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,6 +89,12 @@ strong {
   font-size: 14px;
 }
 
+award {
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 14px;
+  color: rgb(178, 0, 0);
+}
+
 heading {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 22px;
